name:                haskell-qsort-pfm
version:             0.1.0.0
synopsis:            Performance measurment of various quick sort
description:         Please see README.md
homepage:            https://github.com/as.capabl/haskell-qsort-pfm#readme
license:             BSD3
license-file:        LICENSE
author:              Hidenori Azuma
maintainer:          as.capabl@gmail.com
copyright:           2016 Hidenori Azuma
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     List
                     , List2
                     , BV
                     , UV
                     , CXX
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable qsort-pfm
  hs-source-dirs:      app
  main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-qsort-pfm
                     , criterion
                     , mwc-random
                     , vector
  extra-lib-dirs:      ./lib
  extra-libraries:     haskell-qsort-pfm-cxx
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-qsort-pfm
